--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,3 +48,12 @@ form button {
 form button:hover {
     background-color: #64b5f6;
 }
+.perfil-img {
+  max-width: 300px;
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  margin: 20px auto;
+  display: block;
+}
+
